syntax = "proto3";

package kong.model;

option go_package = "github.com/kong/koko/internal/gen/wrpc/kong/model;model";

message Certificate {
  string id = 1;
  string cert = 2;
  string key = 3;
  string cert_alt = 4;
  string key_alt = 5;
  int32 created_at = 6;
  repeated string tags = 7;
}
